Resolve issue of stacking order on smaller screen of CSS row using flex box row-reverse

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ p {
 }
 
 .clear-pad {
-  padding: 0px;
+  padding: 0 !important;
 }
 
 .clear-marg {
